--- a/Anchor.toml
+++ b/Anchor.toml
@@ -10,3 +10,6 @@ wallet = "/Users/pascal/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test-setup = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts -g 'Setup'"
+test-alice = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts -g 'Alice'"
+test-bob = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts -g 'Bob'"
